@@ -1,3 +1,9 @@
+2008-10-08  Piotr Eljasiak  <epiotr@use.pl>
+
+	* src/gnome-cmd-file-selector.cc:
+	* src/gnome-cmd-file-selector.h:
+	Add GnomeCmdFileSelector::is_active()
+
 2008-10-07  Piotr Eljasiak  <epiotr@use.pl>
 
 	* src/gnome-cmd-main-win.cc:
